position and icon fixed

--- a/data/context-search-results.html
+++ b/data/context-search-results.html
@@ -28,13 +28,11 @@
 
                 </ol>
             </div>
-            <div class="action"><a class="more" href="" target="_blank">More<span class="arrow-circle"> &nbsp;</span>
-                <span class="arrow">&#10147;</span></a></div>
+            <div class="action"><a class="more" href="" target="_blank">More<img class="arrow" src="images/icon-more.svg" /></a></div>
         </div>
         <div class="tab-pane" id="wiki">
             <div class="content"></div>
-            <div class="action"><a class="more" href="" target="_blank">More<span class="arrow-circle"> &nbsp;</span>
-                <span class="arrow">&#10147;</span></a></div>
+            <div class="action"><a class="more" href="" target="_blank">More<img class="arrow" src="images/icon-more.svg" /></a></div>
         </div>
         <div class="tab-pane" id="shop">
             <div class="content" style="overflow: scroll">
@@ -51,8 +49,7 @@
                     </tfoot>
                 </table>
             </div>
-            <div class="action"><a class="more" href="" target="_blank">More<span class="arrow-circle"> &nbsp;</span>
-                <span class="arrow">&#10147;</span></a></div>
+            <div class="action"><a class="more" href="" target="_blank">More<img class="arrow" src="images/icon-more.svg" /></a></div>
         </div>
     </div>
 
