--- a/data/context-search-results.html
+++ b/data/context-search-results.html
@@ -28,7 +28,7 @@
 
                 </ol>
             </div>
-            <div class="action"><a class="more" href="" target="_blank">More<img class="arrow" src="images/icon-more.svg" /></a></div>
+            <div class="action"><a class="more"  target="_blank">More<img class="arrow" src="images/icon-more.svg" /></a></div>
         </div>
         <div class="tab-pane" id="wiki">
             <div class="content"></div>
