V1 - define on context-menu

--- a/data/context-search-results.html
+++ b/data/context-search-results.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<div style=""><!-- Remove the style-only for testing -->
+<div>
     <!-- Tabs -->
     <div>
     <ul id="nav-tab" >
@@ -32,10 +32,10 @@
         </div>
         <div class="tab-pane" id="wiki">
             <div class="content"></div>
-            <div class="action"><a class="more" href="" target="_blank">More<img class="arrow" src="images/icon-more.svg" /></a></div>
+            <div class="action"><a class="more" target="_blank">More<img class="arrow" src="images/icon-more.svg" /></a></div>
         </div>
         <div class="tab-pane" id="shop">
-            <div class="content" style="overflow: scroll">
+            <div class="content" >
                 <table id="shop-list">
                     <tbody></tbody>
                     <tfoot style="display:none">
@@ -49,7 +49,7 @@
                     </tfoot>
                 </table>
             </div>
-            <div class="action"><a class="more" href="" target="_blank">More<img class="arrow" src="images/icon-more.svg" /></a></div>
+            <div class="action"><a class="more" target="_blank">More<img class="arrow" src="images/icon-more.svg" /></a></div>
         </div>
     </div>
 
