--- a/data/context-search-results.html
+++ b/data/context-search-results.html
@@ -11,14 +11,15 @@
 <div>
     <!-- Tabs -->
     <div>
-    <ul id="nav-tab" >
-        <li class="active"><a href="#definition">Definition</a></li>
-        <li class="separator"><a href="#wiki">Wikipedia</a></li>
+        <ul id="nav-tab">
+            <li class="active"><a href="#definition">Definition</a></li>
+            <li class="separator"><a href="#wiki">Wikipedia</a></li>
 
-        <li><a href="#shop">Shop</a></li>
-    </ul>
+            <li><a href="#shop">Shop</a></li>
+        </ul>
 
-    </div> <br />
+    </div>
+    <br/>
     <!-- Tab panes -->
     <div id="tab-content">
         <div class="tab-pane active" id="definition">
@@ -28,19 +29,21 @@
 
                 </ol>
             </div>
-            <div class="action"><a class="more"  target="_blank">More<img class="arrow" src="images/icon-more.svg" /></a></div>
+            <div class="action"><a class="more" target="_blank">More<img class="arrow" src="images/icon-more.svg"/></a>
+            </div>
         </div>
         <div class="tab-pane" id="wiki">
             <div class="content"></div>
-            <div class="action"><a class="more" target="_blank">More<img class="arrow" src="images/icon-more.svg" /></a></div>
+            <div class="action"><a class="more" target="_blank">More<img class="arrow" src="images/icon-more.svg"/></a>
+            </div>
         </div>
         <div class="tab-pane" id="shop">
-            <div class="content" >
+            <div class="content">
                 <table id="shop-list">
                     <tbody></tbody>
                     <tfoot style="display:none">
                     <tr>
-                        <td class="item-image"><img src="" alt="" />
+                        <td class="item-image"><img src="" alt=""/>
 
                             <div style="text-align:center"> $&nbsp;<span class="price"></span></div>
                         </td>
@@ -49,14 +52,13 @@
                     </tfoot>
                 </table>
             </div>
-            <div class="action"><a class="more" target="_blank">More<img class="arrow" src="images/icon-more.svg" /></a></div>
+            <div class="action"><a class="more" target="_blank">More<img class="arrow" src="images/icon-more.svg"/></a>
+            </div>
         </div>
     </div>
 
 
 </div>
-
-
 
 
 </body>
