--- a/data/context-search-results.html
+++ b/data/context-search-results.html
@@ -13,9 +13,9 @@
     <div>
         <ul id="nav-tab">
             <li class="active"><a href="#definition">Definition</a></li>
-            <li class="separator"><a href="#wiki">Wikipedia</a></li>
+            <li class="separator"><a href="#wiki" style="border-left: 1px solid #C1C1C1;">Wikipedia</a></li>
 
-            <li><a href="#shop">Shop</a></li>
+            <li><a href="#shop" style="border-left: 1px solid #C1C1C1;">Shop</a></li>
         </ul>
 
     </div>
