--- a/data/context-search-results.html
+++ b/data/context-search-results.html
@@ -12,10 +12,10 @@
     <!-- Tabs -->
     <div>
         <ul id="nav-tab">
-            <li class="active"><a href="#definition"  ondragstart="dragS(event,1);">Definition</a></li>
-            <li class=""><a href="#wiki" style="border-left: 1px solid #C1C1C1;box-sizing: border-box"  ondragstart="dragS(event,2);">Wikipedia</a>
+            <li class="active"><a href="#definition" draggable="false" ondragstart="dragS(event,1);">Definition</a></li>
+            <li class=""><a href="#wiki" style="border-left: 1px solid #C1C1C1;box-sizing: border-box" draggable="false"  ondragstart="dragS(event,2);">Wikipedia</a>
             </li>
-            <li><a href="#shop" id="shop-link" style="border-left: 1px solid #C1C1C1;box-sizing: border-box" draggable="true"
+            <li><a href="#shop" id="shop-link" style="border-left: 1px solid #C1C1C1;box-sizing: border-box" draggable="false"
                    ondragstart="dragS(event,3);" ondrop="dropS(event);">Shop</a></li>
         </ul>
 
